--- a/docker-xapi/docker-compose.yml
+++ b/docker-xapi/docker-compose.yml
@@ -5,7 +5,7 @@ networks:
 
 services:
   backend:
-    image: xapi-backend-image # 后端项目的Docker镜像名称
+    image: xiaoxiongmao5/xapi-backend:1.0.0 # 后端项目的Docker镜像名称
     ports:
       - "8090:8090" # 映射后端项目的端口
     depends_on:
@@ -16,7 +16,8 @@ services:
       - ./docker-xapi-backend/conf:/app/conf
       - ./docker-xapi-backend/log:/app/log
     extra_hosts:
-      - "xpi-gateway.com:192.168.2.104" # 往容器内/etc/hosts文件中添加记录
+      # - "xpi-gateway.com:192.168.2.104" # 往容器内/etc/hosts文件中添加记录 local
+      - "xpi-gateway.com:166.1.190.73"  #linux
     environment:
       - DB_HOST=mysql     # 设置后端项目连接的MySQL主机名
       - DB_PORT=3307      # 设置后端项目连接的MySQL端口
@@ -33,7 +34,7 @@ services:
     # command: ["./scripts/wait-for-nacos.sh", "./xapi-backend"]  #command内应该是可执行文件
 
   gateway:
-    image: xapi-gateway-image # 网关项目的Docker镜像名称
+    image: xiaoxiongmao5/xapi-gateway:1.0.0 # 网关项目的Docker镜像名称
     ports:
       - "8080:8080" # 映射网关项目的端口
     depends_on:
