--- a/docker-xapi/docker-compose.yml
+++ b/docker-xapi/docker-compose.yml
@@ -4,25 +4,29 @@ networks:
   xapi_net:
 
 services:
-  # frontend:
-  #   image: xapi-frontend-image:1.0.0
-  #   # build:
-  #   #   context: .
-  #   #   dockerfile: Dockerfile
-  #   ports:
-  #     - "80:80"  # 映射容器的 80 端口到主机的 80 端口
-  #   depends_on:
-  #     - backend  # 前端容器依赖后端容器
-  #   # volumes:
-  #     # - ./docker-nginx/nginx.conf:/etc/nginx/nginx.conf
-  #     # - ./docker-nginx/logs:/var/log/nginx
-  #     # - ./docker-nginx/wwwlogs:/data/wwwlogs
-  #     # - ./docker-xapi-frontend/:/usr/share/nginx/html
-  #   networks:
-  #     - xapi_net
+  frontend:
+    image: xiaoxiongmao5/xapi-frontend:1.0.0
+    # build:
+    #   context: .
+    #   dockerfile: Dockerfile
+    ports:
+      - "80:80"  # 映射容器的 80 端口到主机的 80 端口
+    depends_on:
+      - backend  # 前端容器依赖后端容器
+    # volumes:
+      # - ./docker-nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+      # - ./docker-nginx/logs:/var/log/nginx
+      # - ./docker-nginx/wwwlogs:/data/wwwlogs
+      # - ./docker-xapi-frontend/:/usr/share/nginx/html
+    extra_hosts:
+      - "xpi-backend.com:192.168.0.47" # 往容器内/etc/hosts文件中添加记录 
+    tty: true
+    restart: always
+    networks:
+      - xapi_net
 
   backend:
-    image: ghcr.io/xiaoxiongmao5/xapi-backend:1.0.1 # 后端项目的Docker镜像名称
+    image: xiaoxiongmao5/xapi-backend:1.0.2 # 后端项目的Docker镜像名称
     container_name: xapi-backend
     ports:
       - "8090:8090" # 映射后端项目的端口
@@ -34,8 +38,8 @@ services:
       - ./docker-xapi-backend/conf:/app/conf
       - ./docker-xapi-backend/log:/app/log
     extra_hosts:
-      # - "xpi-gateway.com:192.168.2.104" # 往容器内/etc/hosts文件中添加记录 local
-      - "xpi-gateway.com:192.168.0.47"  #linux
+      - "xpi-gateway.com:192.168.0.47" # 往容器内/etc/hosts文件中添加记录 local
+      # - "xpi-gateway.com:192.168.0.47"  #linux
     environment:
       - DB_HOST=mysql     # 设置后端项目连接的MySQL主机名
       - DB_PORT=3307      # 设置后端项目连接的MySQL端口
@@ -52,7 +56,7 @@ services:
     # command: ["./scripts/wait-for-nacos.sh", "./xapi-backend"]  #command内应该是可执行文件
 
   gateway:
-    image: ghcr.io/xiaoxiongmao5/xapi-gateway:1.0.1 # 网关项目的Docker镜像名称
+    image: xiaoxiongmao5/xapi-gateway:1.0.1 # 网关项目的Docker镜像名称
     container_name: xapi-gateway
     ports:
       - "8080:8080" # 映射网关项目的端口
