修改docker-compose.yml

--- a/docker-xapi/docker-compose.yml
+++ b/docker-xapi/docker-compose.yml
@@ -4,27 +4,6 @@ networks:
   xapi_net:
 
 services:
-  frontend:
-    image: xiaoxiongmao5/xapi-frontend:1.0.0
-    # build:
-    #   context: .
-    #   dockerfile: Dockerfile
-    ports:
-      - "80:80"  # 映射容器的 80 端口到主机的 80 端口
-    depends_on:
-      - backend  # 前端容器依赖后端容器
-    # volumes:
-      # - ./docker-nginx/nginx.conf:/etc/nginx/conf.d/default.conf
-      # - ./docker-nginx/logs:/var/log/nginx
-      # - ./docker-nginx/wwwlogs:/data/wwwlogs
-      # - ./docker-xapi-frontend/:/usr/share/nginx/html
-    extra_hosts:
-      - "xpi-backend.com:192.168.0.47" # 往容器内/etc/hosts文件中添加记录 
-    tty: true
-    restart: always
-    networks:
-      - xapi_net
-
   backend:
     image: xiaoxiongmao5/xapi-backend:1.0.2 # 后端项目的Docker镜像名称
     container_name: xapi-backend
@@ -38,11 +17,12 @@ services:
       - ./docker-xapi-backend/conf:/app/conf
       - ./docker-xapi-backend/log:/app/log
     extra_hosts:
-      - "xpi-gateway.com:192.168.0.47" # 往容器内/etc/hosts文件中添加记录 local
-      # - "xpi-gateway.com:192.168.0.47"  #linux
+      # - "xpi-gateway.com:192.168.2.104" # 往容器内/etc/hosts文件中添加记录 local
+      - "xpi-gateway.com:192.168.0.47"  #linux
+        #- "xpi-gateway.com:60.204.157.168"  #linux
     environment:
       - DB_HOST=mysql     # 设置后端项目连接的MySQL主机名
-      - DB_PORT=3307      # 设置后端项目连接的MySQL端口
+      - DB_PORT=3306      # 设置后端项目连接的MySQL端口
       - DB_USER=xapiuser      # 设置后端项目连接的MySQL用户名
       - DB_PASSWORD=xapi123456  # 设置后端项目连接的MySQL密码
       - DB_NAME=xapi      # 设置后端项目连接的MySQL数据库名称
@@ -83,7 +63,7 @@ services:
       - MYSQL_USER=xapiuser
       - MYSQL_PASSWORD=xapi123456
     ports:
-      - "3307:3306" # 将MySQL的3306端口映射到宿主机的3307端口
+      - "3306:3306" # 将MySQL的3306端口映射到宿主机的3307端口
     volumes:
       - ./docker-mysql8.0/mysql-data:/var/lib/mysql # 将MySQL数据持久化到宿主机的目录
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql # 将 ./init.sql 映射到容器内的 /docker-entrypoint-initdb.d/init.sql，这是 MySQL 容器初始化时会自动运行的 SQL 初始化脚本目录。
