--- a/docker-xapi/docker-xapi-gateway/conf/appconfig.json
+++ b/docker-xapi/docker-xapi-gateway/conf/appconfig.json
@@ -1,10 +1,6 @@
 {
-    "server": {
-      "port": 8080
-    },
-    "ipWhiteList":[
-      "127.0.0.1",
-      "172.23.0.1",
-      "172.23.0.5"
-    ]
+  "server": {
+    "port": 8080
+  },
+  "ipBlackList": []
 }
